<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/spacing_larger"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutInputEmail"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/font_normal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutInputPass"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText

                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_pass"
                android:inputType="textPassword"
                android:textSize="@dimen/font_normal"
                tools:ignore="RtlSymmetry"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/MainButton"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/registration_register"/>

    </LinearLayout>
</ScrollView>