<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/auth">

                <TextView
                    android:id="@+id/tvMake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:paddingBottom="@dimen/spacing_small"
                    android:paddingEnd="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingTop="@dimen/spacing_small"
                    android:text="@string/auth_make"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_large"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <View
            android:id="@+id/toolbarShadow"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_dropshadow"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_larger"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutInputEmail"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/font_normal"/>

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutInputPass"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/auth_pass"
                            android:inputType="textPassword"
                            android:paddingEnd="40dp"
                            android:textSize="@dimen/font_normal"
                            tools:ignore="RtlSymmetry"/>

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/ibForgotPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:paddingBottom="8dp"
                        android:src="@drawable/ic_password"
                        tools:ignore="ContentDescription"/>

                </RelativeLayout>


                <Button
                    android:id="@+id/btnLogIn"
                    style="@style/MainButton"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/auth_log_in"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>